--- a/client/signup.html
+++ b/client/signup.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <form id="login">
+            <form id="register">
                 <div class="form-group">
                     <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
                 </div>
