--- a/client/habits.html
+++ b/client/habits.html
@@ -20,7 +20,7 @@
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             <li class="nav-item">
-                                <a href="home.thml" class="nav-link align-middle px-0">
+                                <a href="home.html" class="nav-link align-middle px-0">
                                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                                 </a>
                             </li>
@@ -38,7 +38,22 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    Content area...
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-bs-toggle="tab" href="#daily">Daily</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-bs-toggle="tab" href="#weekly">Weekly</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="daily" class="container tab-pane active">
+                            <h3>Daily</h3>
+                        </div>
+                        <div id="weekly" class="container tab-pane fade">
+                            <h3>Weekly</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
