--- a/client/calendar.html
+++ b/client/calendar.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    <ul class="nav nav-tabs" role="tablist">
+                    <ul class="nav nav-tabs nav-justified" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" data-bs-toggle="tab" href="#daily">Daily</a>
                         </li>
@@ -52,6 +52,17 @@
                         </div>
                         <div id="weekly" class="container tab-pane fade">
                             <h3>Weekly</h3>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col border-bottom border-end border-dark">Monday</div>
+                                    <div class="col border-bottom border-end border-dark">Tuesday</div>
+                                    <div class="col border-bottom border-end border-dark">Wednesday</div>
+                                    <div class="col border-bottom border-end border-dark">Thursday</div>
+                                    <div class="col border-bottom border-end border-dark">Friday</div>
+                                    <div class="col border-bottom border-end border-dark">Saturday</div>
+                                    <div class="col border-bottom border-dark">Sunday</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
