--- a/client/habits.html
+++ b/client/habits.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    <ul class="nav nav-tabs" role="tablist">
+                    <ul class="nav nav-tabs nav-justified" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" data-bs-toggle="tab" href="#daily">Daily</a>
                         </li>
