--- a/client/calendar.html
+++ b/client/calendar.html
@@ -53,14 +53,23 @@
                         <div id="weekly" class="container tab-pane fade">
                             <h3>Weekly</h3>
                             <div class="container">
+                                <div class="row bg-dark text-white">
+                                    <div class="col-lg text-center">Monday</div>
+                                    <div class="col-lg text-center">Tuesday</div>
+                                    <div class="col-lg text-center">Wednesday</div>
+                                    <div class="col-lg text-center">Thursday</div>
+                                    <div class="col-lg text-center">Friday</div>
+                                    <div class="col-lg text-center">Saturday</div>
+                                    <div class="col-lg text-center">Sunday</div>
+                                </div>
                                 <div class="row">
-                                    <div class="col border-bottom border-end border-dark">Monday</div>
-                                    <div class="col border-bottom border-end border-dark">Tuesday</div>
-                                    <div class="col border-bottom border-end border-dark">Wednesday</div>
-                                    <div class="col border-bottom border-end border-dark">Thursday</div>
-                                    <div class="col border-bottom border-end border-dark">Friday</div>
-                                    <div class="col border-bottom border-end border-dark">Saturday</div>
-                                    <div class="col border-bottom border-dark">Sunday</div>
+                                    <div class="col-lg border">Sleep on time</div>
+                                    <div class="col-lg border">Done</div>
+                                    <div class="col-lg border">Done</div>
+                                    <div class="col-lg border">To do</div>
+                                    <div class="col-lg border">To do</div>
+                                    <div class="col-lg border">To do</div>
+                                    <div class="col-lg border">To do</div>
                                 </div>
                             </div>
                         </div>
