--- a/client/calendar.html
+++ b/client/calendar.html
@@ -49,9 +49,6 @@
                     <div class="tab-content">
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
-                        </div>
-                        <div id="weekly" class="container tab-pane fade">
-                            <h3>Weekly</h3>
                             <div class="container">
                                 <div class="row bg-dark text-white">
                                     <div class="col-lg text-center">Monday</div>
@@ -63,13 +60,26 @@
                                     <div class="col-lg text-center">Sunday</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg border">Sleep on time</div>
-                                    <div class="col-lg border">Done</div>
-                                    <div class="col-lg border">Done</div>
-                                    <div class="col-lg border">To do</div>
-                                    <div class="col-lg border">To do</div>
-                                    <div class="col-lg border">To do</div>
-                                    <div class="col-lg border">To do</div>
+                                    <div class="col-lg border">Sleep on time Done</div>
+                                    <div class="col-lg border">Sleep on time Done</div>
+                                    <div class="col-lg border">Sleep on time Done</div>
+                                    <div class="col-lg border">Sleep on time To do</div>
+                                    <div class="col-lg border">Sleep on time To do</div>
+                                    <div class="col-lg border">Sleep on time To do</div>
+                                    <div class="col-lg border">Sleep on time To do</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="weekly" class="container tab-pane fade">
+                            <h3>Weekly</h3>
+                            <div class="container">
+                                <div class="row bg-dark text-white">
+                                    <div class="col-lg text-center">Week 1</div>
+                                    <div class="col-lg text-center">Week 2</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg border">Drink water Done</div>
+                                    <div class="col-lg border">Drink water To do</div>
                                 </div>
                             </div>
                         </div>
