--- a/client/habits.html
+++ b/client/habits.html
@@ -49,9 +49,25 @@
                     <div class="tab-content">
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
+                            <form id="daily-habbit">
+                                <div class="form-group">
+                                    <label for="daily-name">Create a new habbit</label>
+                                    <textarea type="text" class="form-control" id="daily-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                </div>
+                                <br>
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                            </form>
                         </div>
                         <div id="weekly" class="container tab-pane fade">
                             <h3>Weekly</h3>
+                            <form id="weekly-habbit">
+                                <div class="form-group">
+                                    <label for="weekly-name">Create a new habbit</label>
+                                    <textarea type="text" class="form-control" id="weekly-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                </div>
+                                <br>
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                            </form>
                         </div>
                     </div>
                 </div>
