--- a/client/home.html
+++ b/client/home.html
@@ -38,7 +38,12 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    Content area...
+                    <h1>Hi (username)</h1>
+                    <br>
+                    <h3>Your current completion streak is:</h3>
+                    <h3>0</h3>
+                    <br>
+                    <h3>Todays tasks:</h3>
                 </div>
             </div>
         </div>
