--- a/client/signup.html
+++ b/client/signup.html
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-dark">Submit</button>
             </form>
         </div>
     </body>
