--- a/client/home.html
+++ b/client/home.html
@@ -43,7 +43,9 @@
                     <h3>Your current completion streak is:</h3>
                     <h3>0</h3>
                     <br>
-                    <h3>Todays tasks:</h3>
+                    <h3>Todays habbits:</h3>
+                    <br>
+                    <h3>Weekly habbits:</h3>
                 </div>
             </div>
         </div>
