--- a/client/index.html
+++ b/client/index.html
@@ -11,16 +11,24 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-        <div class="container-fluid">
-            <form id="login">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
+        <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 600px;"">
+            <div class="row">
+                <div class="col">
+                    <h3>Log in</h3>
+                    <form id="login" action="home.html">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
+                        </div>
+                        <button type="submit" class="btn btn-dark">Submit</button>
+                    </form>
+                    <br>
+                    <h6>Don't have an account?</h6>
+                    <a href="signup.html">Sign up!</a>
                 </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
-                </div>
-                <button type="submit" class="btn btn-dark">Submit</button>
-            </form>
+            </div>
         </div>
     </body>
 </html>
