--- a/client/signup.html
+++ b/client/signup.html
@@ -11,16 +11,23 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-        <div class="container-fluid">
-            <form id="register">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
+        <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 600px;"">
+            <div class="row">
+                <div class="col">
+                    <h3>Sign up</h3>
+                    <form id="register" action="home.html">
+                        <div class="form-group" >
+                            <label for="username">Create a username</label>
+                            <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Create a password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
+                        </div>
+                        <button type="submit" class="btn btn-dark">Submit</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
-                </div>
-                <button type="submit" class="btn btn-dark">Submit</button>
-            </form>
+            </div>
         </div>
     </body>
 </html>
