removed log in redirect

--- a/client/signup.html
+++ b/client/signup.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col">
                     <h3>Sign up</h3>
-                    <form id="register" action="home.html">
+                    <form id="register">
                         <div class="form-group" >
                             <label for="username">Create a username</label>
                             <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
