--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col">
                     <h3>Log in</h3>
-                    <form id="login" action="home.html">
+                    <form id="login">
                         <div class="form-group">
                             <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
                         </div>
