--- a/client/habits.html
+++ b/client/habits.html
@@ -9,6 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./css/index.css">
+        <script defer src="js/createHabit.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -52,10 +53,10 @@
                             <form id="daily-habbit">
                                 <div class="form-group">
                                     <label for="daily-name">Create a new habbit</label>
-                                    <textarea type="text" class="form-control" id="daily-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                    <textarea type="text" id="form-day" class="form-control" id="daily-name" placeholder="Habbit name" maxlength="100"></textarea>
                                 </div>
                                 <br>
-                                <button type="submit" class="btn btn-dark">Submit</button>
+                                <button type="submit" id="submit-day" class="btn btn-dark">Submit</button>
                             </form>
                         </div>
                         <div id="weekly" class="container tab-pane fade">
@@ -63,10 +64,10 @@
                             <form id="weekly-habbit">
                                 <div class="form-group">
                                     <label for="weekly-name">Create a new habbit</label>
-                                    <textarea type="text" class="form-control" id="weekly-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                    <textarea type="text" id="form-week" class="form-control" id="weekly-name" placeholder="Habbit name" maxlength="100"></textarea>
                                 </div>
                                 <br>
-                                <button type="submit" class="btn btn-dark">Submit</button>
+                                <button type="submit" id="submit-week" class="btn btn-dark">Submit</button>
                             </form>
                         </div>
                     </div>
