--- a/client/home.html
+++ b/client/home.html
@@ -35,6 +35,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <button type="button" id="logout">Log Out</button>
                     </div>
                 </div>
                 <div class="col py-3">
