jwt tokens and database connected

--- a/client/habits.html
+++ b/client/habits.html
@@ -50,10 +50,10 @@
                     <div class="tab-content">
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
-                            <form id="daily-habbit">
+                            <form id="daily-habit">
                                 <div class="form-group">
-                                    <label for="daily-name">Create a new habbit</label>
-                                    <textarea type="text" id="form-day" class="form-control" id="daily-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                    <label for="daily-name">Create a new habit</label>
+                                    <textarea type="text" class="form-control" id="dailyName" placeholder="Habit name" maxlength="100"></textarea>
                                 </div>
                                 <br>
                                 <button type="submit" id="submit-day" class="btn btn-dark">Submit</button>
@@ -61,10 +61,10 @@
                         </div>
                         <div id="weekly" class="container tab-pane fade">
                             <h3>Weekly</h3>
-                            <form id="weekly-habbit">
+                            <form id="weekly-habit">
                                 <div class="form-group">
-                                    <label for="weekly-name">Create a new habbit</label>
-                                    <textarea type="text" id="form-week" class="form-control" id="weekly-name" placeholder="Habbit name" maxlength="100"></textarea>
+                                    <label for="weekly-name">Create a new habit</label>
+                                    <textarea type="text" class="form-control" id="weekly-name" placeholder="Habit name" maxlength="100"></textarea>
                                 </div>
                                 <br>
                                 <button type="submit" id="submit-week" class="btn btn-dark">Submit</button>
