--- a/client/habits.html
+++ b/client/habits.html
@@ -64,7 +64,7 @@
                             <form id="weekly-habit">
                                 <div class="form-group">
                                     <label for="weekly-name">Create a new habit</label>
-                                    <textarea type="text" class="form-control" id="weekly-name" placeholder="Habit name" maxlength="100"></textarea>
+                                    <textarea type="text" class="form-control" id="weeklyName" placeholder="Habit name" maxlength="100"></textarea>
                                 </div>
                                 <br>
                                 <button type="submit" id="submit-week" class="btn btn-dark">Submit</button>
