--- a/client/calendar.html
+++ b/client/calendar.html
@@ -9,6 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./css/index.css">
+        <script src="js/getHabits.js"></script>
     </head>
     <body>
         <div class="container-fluid">
