--- a/client/calendar.html
+++ b/client/calendar.html
@@ -50,7 +50,7 @@
                     <div class="tab-content">
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
-                            <div class="container">
+                            <div class="container" id="habitGrid">
                                 <div class="row bg-dark text-white">
                                     <div class="col-lg text-center">Monday</div>
                                     <div class="col-lg text-center">Tuesday</div>
@@ -60,7 +60,7 @@
                                     <div class="col-lg text-center">Saturday</div>
                                     <div class="col-lg text-center">Sunday</div>
                                 </div>
-                                <div class="row">
+                                <div class="row" >
                                     <div class="col-lg border">Sleep on time Done</div>
                                     <div class="col-lg border">Sleep on time Done</div>
                                     <div class="col-lg border">Sleep on time Done</div>
