--- a/client/calendar.html
+++ b/client/calendar.html
@@ -8,30 +8,31 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <nav class="navbar"></nav>
+        <div class="container-fluid backgr">
             <div class="row flex-nowrap">
-                <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+                <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 homebar">
                     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
                         <a href="#" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                            <span class="fs-5 d-none d-sm-inline">Habbit.at</span>
+                            <span class="fs-5 d-none d-sm-inline">Habit.at</span>
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             <li class="nav-item">
                                 <a href="home.html" class="nav-link align-middle px-0">
-                                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                                    <i class="fs-4 bi-house text"></i> <span class="ms-1 d-none d-sm-inline text">Home</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="calendar.html" class="nav-link align-middle px-0">
-                                    <i class="fs-4 bi-calendar3"></i> <span class="ms-1 d-none d-sm-inline">Calendar</span>
+                                    <i class="fs-4 bi-calendar3 text"></i> <span class="ms-1 d-none d-sm-inline text">Calendar</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="habits.html" class="nav-link align-middle px-0">
-                                    <i class="fs-4 bi-card-checklist"></i> <span class="ms-1 d-none d-sm-inline">Goals</span>
+                                    <i class="fs-4 bi-card-checklist text"></i> <span class="ms-1 d-none d-sm-inline text">Goals</span>
                                 </a>
                             </li>
                         </ul>
@@ -46,6 +47,7 @@
                             <a class="nav-link" data-bs-toggle="tab" href="#weekly">Weekly</a>
                         </li>
                     </ul>
+                </nav>
                     <div class="tab-content">
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
