--- a/client/signup.html
+++ b/client/signup.html
@@ -9,20 +9,20 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script defer src='js/signUp.js'></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
-    <body>
-        <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 600px;"">
+    <body class="homepage">
+        <div class="container-fluid d-flex align-items-center justify-content-center habitat-container1" style="height: 600px;">
             <div class="row">
                 <div class="col">
                     <h3>Sign up</h3>
                     <form id="register">
                         <div class="form-group" >
-                            <label for="username">Create a username</label>
+                            <label class="h3" for="username">Create a username</label>
                             <input type="text" class="form-control" id="username" placeholder="Username" maxlength="20"> <br>
                         </div>
                         <div class="form-group">
-                            <label for="password">Create a password</label>
+                            <label class="h3" for="password">Create a password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password" maxlength="20"> <br>
                         </div>
                         <button type="submit" class="btn btn-dark">Submit</button>
