--- a/client/home.html
+++ b/client/home.html
@@ -9,6 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script defer src='js/logout.js'></script>
+        <script defer src='js/home.js'></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./css/index.css">
     </head>
@@ -41,7 +42,7 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    <h1>Hi (username)</h1>
+                    <h1 id="user-header">Hi </h1>
                     <br>
                     <h3>Your current completion streak is:</h3>
                     <h3>0</h3>
