Display username bug fix

--- a/client/home.html
+++ b/client/home.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    <h1 id="user-header">Hi </h1>
+                    <h1 id="user-name">Hi </h1>
                     <br>
                     <h3>Your current completion streak is:</h3>
                     <h3>0</h3>
