--- a/client/home.html
+++ b/client/home.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="col py-3">
-                    <h1>Hi (username)</h1>
+                    <h1>Hi (username)</h1> <h1> hiii</h1>
                     <br>
                     <h3>Your current completion streak is:</h3>
                     <h3>0</h3>
