--- a/client/calendar.html
+++ b/client/calendar.html
@@ -9,7 +9,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./css/index.css">
-        <script src="js/getHabits.js"></script>
+        <script defer src="js/getDayHabits.js"></script>
+        
     </head>
     <body>
         <div class="container-fluid">
@@ -52,6 +53,7 @@
                             <h3>Daily</h3>
                             <div class="container" id="habitGrid">
                                 <div class="row bg-dark text-white">
+                                    <div class="col-lg text-center">Habits</div>
                                     <div class="col-lg text-center">Monday</div>
                                     <div class="col-lg text-center">Tuesday</div>
                                     <div class="col-lg text-center">Wednesday</div>
