--- a/client/calendar.html
+++ b/client/calendar.html
@@ -10,14 +10,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script defer src='js/logout.js'></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-<<<<<<< HEAD
-        <link rel="stylesheet" href="./css/index.css">
-        <script defer src="js/getDayHabits.js"></script>
-        
-=======
         <link rel="stylesheet" href="./css/style.css">
-        <script src="js/getHabits.js"></script>
->>>>>>> 541bf31e22861b0026e03e8669bebad7cc1181aa
+        <script defer src="js/getDayHabits.js"></script>
     </head>
     <body>
         <nav class="navbar"></nav>
@@ -63,8 +57,8 @@
                             <h3>Daily</h3>
                             <div class="container" id="habitGrid">
                                 <div class="row bg-dark text-white">
-                                    <div class="col-lg text-center">Habits</div>
-                                    <div class="col-lg text-center">Monday</div>
+                                    <div class="col-lg text-center border">Habits</div>
+                                    <div class="col-lg text-center border">Monday</div>
                                     <div class="col-lg text-center">Tuesday</div>
                                     <div class="col-lg text-center">Wednesday</div>
                                     <div class="col-lg text-center">Thursday</div>
@@ -73,13 +67,7 @@
                                     <div class="col-lg text-center">Sunday</div>
                                 </div>
                                 <div class="row" >
-                                    <div class="col-lg border">Sleep on time Done</div>
-                                    <div class="col-lg border">Sleep on time Done</div>
-                                    <div class="col-lg border">Sleep on time Done</div>
-                                    <div class="col-lg border">Sleep on time To do</div>
-                                    <div class="col-lg border">Sleep on time To do</div>
-                                    <div class="col-lg border">Sleep on time To do</div>
-                                    <div class="col-lg border">Sleep on time To do</div>
+                                    
                                 </div>
                             </div>
                         </div>
