--- a/client/calendar.html
+++ b/client/calendar.html
@@ -56,7 +56,7 @@
                         <div id="daily" class="container tab-pane active">
                             <h3>Daily</h3>
                             <div class="container" id="habitGrid">
-                                <div class="row bg-dark text-white">
+                                <div class="row bg-dark text-white daily-container">
                                     <div class="col-lg text-center border">Habits</div>
                                     <div class="col-lg text-center border">Monday</div>
                                     <div class="col-lg text-center">Tuesday</div>
