--- a/client/signup.html
+++ b/client/signup.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body class="homepage">
+        <h1>Habit.at</h1>
         <div class="container-fluid d-flex align-items-center justify-content-center habitat-container1" style="height: 600px;">
             <div class="row">
                 <div class="col">
