--- a/client/calendar.html
+++ b/client/calendar.html
@@ -57,8 +57,8 @@
                             <h3>Daily</h3>
                             <div class="container" id="habitGrid">
                                 <div class="row bg-dark text-white">
-                                    <div class="col-lg text-center border">Habits</div>
-                                    <div class="col-lg text-center border">Monday</div>
+                                    <div class="col-lg text-center">Habits</div>
+                                    <div class="col-lg text-center">Monday</div>
                                     <div class="col-lg text-center">Tuesday</div>
                                     <div class="col-lg text-center">Wednesday</div>
                                     <div class="col-lg text-center">Thursday</div>
